fixed license info in man page

--- a/man/gpio-admin.1
+++ b/man/gpio-admin.1
@@ -41,8 +41,10 @@ Source for gpio-admin is available from: <http://github.com/quick2wire/quick2wir
 
 .SH COPYRIGHT
 Copyright \(co 2012 Quick2Wire Ltd. <http://quick2wire.com/>
-.br
-License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>.
-.br
+.PP
+You may use this library under the terms of either the MIT License or
+the GNU Lesser General Public License (LGPL) Version 3.  
+See <http://quick2wire.com/license> for more information.
+.PP
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law.
