--- a/man/gpio-admin.1
+++ b/man/gpio-admin.1
@@ -28,8 +28,8 @@ unexports pin \fIn\fR, removing the directory \fB/sys/devices/virtual/gpio\fR\fI
 
 .SH NOTE
 .PP
-Pins are identified by their SOC numbers, \fInot\fR the GPIO header pin numbers. 
-For example, on the Raspberry Pi header pin 3 is mapped to SOC number 0, 5 to 1, etc.
+Pins are identified by their SOC poin numbers, \fInot\fR the header pin numbers.
+For example, on the Raspberry Pi header pin 3 is mapped to SOC pin number 0, 5 to 1, etc.
 
 .SH AUTHOR
 Written by Nat Pryce
@@ -44,7 +44,7 @@ Copyright \(co 2012 Quick2Wire Ltd. <http://quick2wire.com/>
 .PP
 You may use this library under the terms of either the MIT License or
 the GNU Lesser General Public License (LGPL) Version 3.  
-See <http://quick2wire.com/license> for more information.
+See <http://license.quick2wire.com> for more information.
 .PP
 This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law.
