--- a/man/gpio-admin.1
+++ b/man/gpio-admin.1
@@ -28,7 +28,7 @@ unexports pin \fIn\fR, removing the directory \fB/sys/devices/virtual/gpio\fR\fI
 
 .SH NOTE
 .PP
-Pins are identified by their SOC poin numbers, \fInot\fR the header pin numbers.
+Pins are identified by their SOC pin numbers, \fInot\fR the header pin numbers.
 For example, on the Raspberry Pi header pin 3 is mapped to SOC pin number 0, 5 to 1, etc.
 
 .SH AUTHOR
